<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAlhondiga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_alhondiga_pizarra"
            android:background="#9FA8DA"/>

        <Button
            android:id="@+id/buttonCehorpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cehorpa_pizarra"
            android:background="#FAFAFA"/>

        <Button
            android:id="@+id/buttonTomate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_tomate_pizarra"
            android:background="#FAFAFA"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listeP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#E1F5FE">

    </ListView>

</LinearLayout>