<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvNumAlbaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFechaAlbaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textColor="#FFDDDDDD"
        app:layout_constraintBaseline_toBaselineOf="@id/tvNumAlbaran"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/albaran_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/albaranes_background"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumAlbaran"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView_sello"
            android:layout_width="200dp"
            android:layout_height="68dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/albaranes_sello_pagado"
            android:scaleType="centerInside"
            android:alpha="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sellopagado" />

        <TextView
            android:id="@+id/tvNombreHortaliza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="#60a2f3"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPartida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvImporte"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="32dp"
            android:text="@string/albaranes_importe"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@id/tvPrecio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvPrecio" />

        <TextView
            android:id="@+id/tvPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="@string/albaranes_precio"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@id/tvKilos"
            app:layout_constraintStart_toEndOf="@+id/tvKilos" />

        <TextView
            android:id="@+id/tvKilos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/albaranes_kilos"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/tvNombreHortaliza"
            app:layout_constraintTop_toBottomOf="@+id/tvNombreHortaliza" />

        <TextView
            android:id="@+id/tvKilosNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvKilos"
            app:layout_constraintTop_toBottomOf="@+id/tvKilos" />

        <TextView
            android:id="@+id/tvImporteNum"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvImporte"
            app:layout_constraintTop_toBottomOf="@+id/tvImporte" />

        <TextView
            android:id="@+id/tvPrecioNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvPrecio"
            app:layout_constraintTop_toBottomOf="@+id/tvPrecio" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>